--- a/src/app/main/main-content/proffessor/proffessor.component.html
+++ b/src/app/main/main-content/proffessor/proffessor.component.html
@@ -17,9 +17,9 @@
       <div class="person-desc">
         <h1>{{person.name}}</h1>
         <p>{{person.type | typeChange}}</p>
-        <div *ngIf="person.affiliation_name;then content else other_content">here is ignored</div>
+        <div *ngIf="person.affiliation;then content else other_content">here is ignored</div>
 
-        <ng-template #content><p>{{person.affiliation_name}}</p></ng-template>
+        <ng-template #content><p>{{person.affiliation}}</p></ng-template>
         <ng-template #other_content><p>Visual Media Lab <br> Graduate School of Culture and Technology, KAIST</p></ng-template>
 
         
@@ -38,7 +38,7 @@
           <h3>Publications</h3>
           <table class="table">
             <tbody>
-              <tr *ngFor="let pub of person.publications | orderBy:order:ascending">
+              <tr *ngFor="let pub of person.publications">
                 <td class="table-left">{{pub.conference}}</td>
                 <td>
                   <p>{{pub.title}}</p>
@@ -56,7 +56,7 @@
           <h3>Projects</h3>
           <table class="table">
             <tbody>
-              <tr *ngFor="let pro of person.projects | orderBy:order:ascending">
+              <tr *ngFor="let pro of person.projects">
                 <td class="table-left">{{pro.year}}</td>
                 <td>
                   <p>{{pro.name}}</p>
@@ -138,6 +138,7 @@
   </tbody>
 </table>
 <hr/>-->
+
 
 
 
