--- a/src/app/main/main-sidebar/main-sidebar.component.html
+++ b/src/app/main/main-sidebar/main-sidebar.component.html
@@ -6,11 +6,11 @@
           <div class="hideOverflow">
             <dd [ngClass]="{'open': activeLink == link.firstLink[1]}" >
               <dl (click)="toggleSubMenu(subLink.data, subLink.scroll)" routerLinkActive="active" *ngFor="let subLink of link.secondLink" >
-                <a [routerLink]="[subLink.url]" class="menu01 secondMenu" >{{subLink.data | uppercase}}</a>
+                <a [routerLink]="[subLink.url]" class="menu01 secondMenu" >{{subLink.data}}</a>
                 <div class="hideOverflow">
                     <dd [ngClass]="{'open': subActiveLink == subLink.data }" >
                       <dl *ngFor="let inner of subLink.innerLink" (click)="sidebarNavConnect()" >
-                        <a (click)="clickSubSubMenu($event, inner)" [routerLink]="[subLink.url]" class="thirdMenu" >{{inner | uppercase}}</a>
+                        <a (click)="clickSubSubMenu($event, inner)" [routerLink]="[subLink.url]" class="thirdMenu" >{{inner}}</a>
                       </dl>
                     </dd>
                 </div>
