--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -224,9 +224,9 @@
         </div>
         <div class="copyright hidden-sm hidden-xs">
           <p>Copyrights &copy; 2017
-            <a href="http://vml.kaist.ac.kr/" title="">VML KAIST</a>. All Right Reserved.</p>
+            <a href="http://vml.kaist.ac.kr/" title="">Visual Media Lab, KAIST</a>. All Right Reserved.</p>
           <p>Developed By :
-            <a href="http://jundong.info/" title="">JJAKA</a>
+            <a href="http://jundongpark.com/" title="">Jundong</a>
           </p>
         </div>
       </div>
