--- a/src/app/main/main-navbar/main-navbar.component.scss
+++ b/src/app/main/main-navbar/main-navbar.component.scss
@@ -45,6 +45,7 @@
             color: $primary_white;
             a {
                 color:inherit;
+                font-size: 0.9rem;
             }
         }
     }
