--- a/src/app/main/main-sidebar/main-sidebar.component.html
+++ b/src/app/main/main-sidebar/main-sidebar.component.html
@@ -22,6 +22,12 @@
       </nav>
       <div class="legal"></div>
     </div>
+
+    <!-- <div class="copyright">
+      <p>Copyrights &copy; 2017
+        <a href="http://vml.kaist.ac.kr/" title="">Visual Media Lab, KAIST</a>. All Right Reserved.</p>
+    </div> -->
+
   </div>
 
   <div (click)="sidebarNavConnect()" class="make_dimmer" [ngClass]='{"dimmer":state}'></div>
