--- a/src/app/main/main-sidebar/main-sidebar.component.scss
+++ b/src/app/main/main-sidebar/main-sidebar.component.scss
@@ -129,3 +129,19 @@
         height:100%;
     }
 }
+
+
+.copyright {
+    flex-flow: column;
+    display: flex;
+    position:  absolute;
+    bottom: 50px;
+    background-color: rgba(0,0,0,0.05);
+    width: 100%;
+    height: 100px;
+
+    p {
+        margin: 10px;
+        font-size: 0.75rem;
+    }
+}
