--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
@@ -26,11 +26,15 @@
           <a *ngIf="pubs[0].slides" target="_blank" download type="application/octet-stream" [href]='imgPath +pubs[0].slides' target="_blank">Download Slides</a>  
           <a *ngIf="pubs[0].video" target="_blank" download type="application/octet-stream" [href]='imgPath +pubs[0].video' target="_blank">Download Video</a>  
           <a *ngIf="pubs[0].dateset" target="_blank" download type="application/octet-stream" [href]='imgPath +pubs[0].dataset' target="_blank">Download Dataset</a>  
+          <a *ngIf="pubs[0].supplementary_material" target="_blank" download type="application/octet-stream" [href]='imgPath +pubs[0].supplementary_material' target="_blank">Download Supplementary Material</a>  
+          <a *ngIf="pubs[0].project_page" target="_blank" [href]='imgPath +pubs[0].project_page' target="_blank">Open Project Page</a>  
+
           <!--<a href="#">Slides (PPTX, 204.3MB)</a> / 
           <a href="#">Videos</a> / 
           <a href="#">Supplemental document</a> /
           <a href="#">Code (ZIP, 43.2MB)</a> / 
           <a href="#">Datasets</a>-->
+
         </p>
 
         <div class="imgDiv">
@@ -49,7 +53,7 @@
         <iframe width="1280" height="720" src="https://www.youtube.com/embed/ZVEAHutpv0M" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
       </div> -->
 
-      <div class="embed-responsive embed-responsive-16by9" *ngIf="pubs[0].video?.length > 0" >
+      <div class="videoURL embed-responsive embed-responsive-16by9" *ngIf="pubs[0].video?.length > 0" >
         <iframe class="videoURL embed-responsive-item" [src]="safeURL" allowfullscreen></iframe>
       </div>
 
