--- a/src/app/main/main-content/research-publicate/research-publicate.component.html
+++ b/src/app/main/main-content/research-publicate/research-publicate.component.html
@@ -14,7 +14,6 @@
                         imgPath+ publication.smallimg + " 300w "'
               sizes="(min-width:990px) 300px, 800px">
           <!-- <img default="./assets/imgs/no_image.jpg" [srcset]=" imgPath + publication.img" [src]=" imgPath + publication.img"> -->
-
         </div>
         <div class="data-desc">
           <a [routerLink]='[ "individual", publication.id]' class="h3" >{{publication.title}}</a>
@@ -27,7 +26,7 @@
           <p class="menu01" *ngIf='publication.journal'>Journal: {{publication.journal}}</p>
 
           <!-- <p class="menu01"> <a href='./../../../../assets/test.html' target="_blank">Open Project Page</a> -->
-          <p class="menu01"> <a *ngIf="publication.file" [href]='publication.file' target="_blank">Open Project Page</a></p>
+          <p class="menu01"> <a *ngIf="publication.project_page" target="_blank" [href]='imgPath + publication.project_page' target="_blank">Open Project Page</a></p>
           <p class="menu01"> <a *ngIf="publication.paper" target="_blank" download type="application/octet-stream" [href]='imgPath + publication.paper' target="_blank"> Download Paper</a></p>
 
         </div>
