--- a/src/app/main/main-content/research-thesis/research-thesis.component.html
+++ b/src/app/main/main-content/research-thesis/research-thesis.component.html
@@ -9,10 +9,11 @@
 
       <div *ngFor="let publication of data" class="data-box">
         <div class="data-img">
-
-          <img default="./../../../../assets/Contents/imgs/no_image.jpg" [srcset]='imgPath + publication.img + " 800w, " +
-                        imgPath+ publication.smallimg + " 300w "' sizes="(min-width:990px) 300px, 800px">
-
+          <img default="./../../../../assets/Contents/imgs/no_image.jpg" 
+              [srcset]= 'imgPath + publication.img + " 800w, " +
+                        imgPath+ publication.smallimg + " 300w "'
+              sizes="(min-width:990px) 300px, 800px">
+          <!-- <img default="./assets/imgs/no_image.jpg" [srcset]=" imgPath + publication.img" [src]=" imgPath + publication.img"> -->
         </div>
         <div class="data-desc">
           <h3>{{publication.title}}</h3>
@@ -21,6 +22,7 @@
               {{author}}{{isLast ? '' : ', '}}
             </p>
           </div>
+
           <p class="menu01">
             <a href='./../../../../assets/test.html' target="_blank">Open Project Page</a>
             <a *ngIf="publication.paper" target="_blank" download type="application/octet-stream" [href]='imgPath + publication.paper'
