--- a/src/app/main/main-sidebar/main-sidebar.component.scss
+++ b/src/app/main/main-sidebar/main-sidebar.component.scss
@@ -146,6 +146,6 @@
     }
 }
 
-.menu01 {
+.menu01 .menu01:link, .menu01:hover, .menu01:active, .menu01:visited, .menu01:focus {
     text-decoration: none;
 }
