--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,3 @@
-<!-- <div *ngIf="issues; else loadingIssues;">
-  <ul>
-    <li *ngFor="let item of issues| async">
-       {{ item | json }}
-    </li>
-  </ul>
-</div>
-<ng-template #loadingIssues>
-  <div>Loading ...</div>
-</ng-template>  -->
-
-
 <div class="collapse fixed-top" id="navbarToggleExternalContent">
   <div class="bg-inverse p-4">
     <div class="btn-box">
@@ -64,16 +52,9 @@
 
     <div class="row header">
 
-
-
-
-
-
-
       <div class="video-background">
         <div class="video-foreground">
-          <iframe src="https://www.youtube.com/embed/Ewb_YBTEkZ0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=W0LHTWG-UmQ"
-            frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Ewb_YBTEkZ0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
