--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.html
@@ -53,7 +53,7 @@
         <iframe width="1280" height="720" src="https://www.youtube.com/embed/ZVEAHutpv0M" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
       </div> -->
 
-      <div class="videoURL embed-responsive embed-responsive-16by9" *ngIf="pubs[0].video?.length > 0" >
+      <div class="videoURL embed-responsive embed-responsive-16by9" *ngIf="pubs[0].youtube?.length > 0" >
         <iframe class="videoURL embed-responsive-item" [src]="safeURL" allowfullscreen></iframe>
       </div>
 
