--- a/src/app/main/main-content/search-result/search-result.component.html
+++ b/src/app/main/main-content/search-result/search-result.component.html
@@ -28,7 +28,7 @@
         <h2 class="list-title col-sm-12">PUBLICATIONS</h2>
 
         <!-- <div (click)='routing("publications", publication.id, publication.type)'  -->
-        <a href='./../../../../assets/test.html' target="_blank" 
+        <a [routerLink]='["main/international/individual/" , result_publications.id]' target="_blank" 
         *ngFor="let publication of result_publications" class="object-box col-sm-12 col-md-6 col-lg-6 col-xl-2">
           <div class="object-desc">
             <h5>{{publication.title}}</h5>
