--- a/src/app/main/main-content/about-sponser/about-sponser.component.html
+++ b/src/app/main/main-content/about-sponser/about-sponser.component.html
@@ -1,7 +1,7 @@
 <div class="flex-content">
   <div class="content col-sm container-fluid">
     <div class="front-image-max">
-      <img src="./../../../../assets/Contents/imgs/about_us_intro.png">
+      <img src="./../../../../assets/Contents/imgs/sponsorship.png">
       <div class="front-title">
         <h2>Thank you for your support!!</h2>
       </div>
@@ -16,7 +16,7 @@
 
         <div *ngFor="let sponsers of platinum$ | async" class="sponser-name text-center">
           <sub>{{sponsers[0].year}}</sub>
-          <p (click)= 'navigateTo(spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
+          <p (click)= 'navigateTo(spon.sponsor_id, spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
         </div>
 
       </div>
@@ -29,7 +29,7 @@
         <div *ngFor="let sponsers of gold$ | async" class="sponser-name text-center">
 
           <sub>{{sponsers[0].year}}</sub>
-          <p (click)= 'navigateTo(spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
+          <p (click)= 'navigateTo(spon.sponsor_id, spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
         </div>
       </div>
 
@@ -40,7 +40,7 @@
         </div>
         <div *ngFor="let sponsers of silver$ | async" class="sponser-name text-center">
           <sub>{{sponsers[0].year}}</sub>
-          <p (click)= 'navigateTo(spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
+          <p (click)= 'navigateTo(spon.sponsor_id, spon.link, spon.type)' class="spon" *ngFor="let spon of sponsers">{{spon.name}}</p>
         </div>
 
       </div>
