--- a/src/app/main/main-content/about-sponser/about-sponser.component.scss
+++ b/src/app/main/main-content/about-sponser/about-sponser.component.scss
@@ -20,7 +20,7 @@
     img {
         margin-left:0;
         width: 100vw;
-        padding-left:250px;
+        padding-left: $sidebar-width;
     }
     .front-title {
         max-width: 50vw;
