--- a/src/app/main/main-content/research-publicate/research-publicate.component.html
+++ b/src/app/main/main-content/research-publicate/research-publicate.component.html
@@ -11,16 +11,16 @@
         <div class="data-img">
           <img default="./../../../../assets/Contents/imgs/no_image.jpg" 
               [srcset]= 'imgPath + publication.img + " 800w, " +
-                        imgPath+ publication.smallimg + " 300w "'
+                        imgPath+ publication.smallImg + " 300w "'
               sizes="(min-width:990px) 300px, 800px">
           <!-- <img default="./assets/imgs/no_image.jpg" [srcset]=" imgPath + publication.img" [src]=" imgPath + publication.img"> -->
         </div>
         <div class="data-desc">
           <a [routerLink]='[ "individual", publication.id]' class="h3" >{{publication.title}}</a>
           <div class="people_name">
-            <p *ngFor="let author of publication.authors; let isLast=last">
-              {{author}}{{isLast ? '' : ', '}}
-            </p>
+            <a [routerLink]='["/main/people/person", author.id]' *ngFor="let author of publication.authors; let isLast=last" >
+              {{author.name}}{{isLast ? '' : ', '}}
+            </a>
           </div>
           <p class="menu01" *ngIf='publication.conference'>Conference: {{publication.conference}}</p>
           <p class="menu01" *ngIf='publication.journal'>Journal: {{publication.journal}}</p>
