--- a/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
+++ b/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
@@ -81,8 +81,18 @@
     }
 }
 
+.video-box {
+    margin-bottom: 1.5rem;
+}
+
 @media (max-width: 990px) {
     .row {
         margin: 3.5rem 3.5rem 6rem 3.5rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .people-box {
+        flex-flow:column;
     }
 }
